--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,22 +1,27 @@
-<div class="px-2 flex items-center">
-  <div>
-    <h3><%= event.name %></h3>
-    <div class="event-stats flex">
+<%= link_to event do %>
+  <div class="px-2 flex items-center">
 
-      <div class="flex items-center">
-        <i class="fa-solid fa-user"></i>
-        <%= event.participants.count %>
-      </div>
+    <div class="w-2/3">
+      <h3><%= event.name %></h3>
+      <div class="event-stats flex">
 
-      <div class="flex items-center">
-        <i class="fa-solid fa-receipt"></i>
-        <%= event.bills.count %>
+        <div class="flex items-center">
+          <i class="fa-solid fa-user"></i>
+          <%= event.participants.count %>
+        </div>
+
+        <div class="flex items-center">
+          <i class="fa-solid fa-receipt"></i>
+          <%= event.bills.count %>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="event-total">
-    <%= event.total %>
-  </div>
+    <div class="event-total w-1/3">
+      <div class="text-2xl font-bold">
+        $<%= event.total %>
+      </div>
+    </div>
 
-</div>
+  </div>
+<% end %>
