--- a/app/views/bills/show.html.erb
+++ b/app/views/bills/show.html.erb
@@ -1,7 +1,16 @@
 <h1 class="font-bold text-3xl"><%= @bill.name %></h1>
+
+<h2 class="font-bold">Rendered:</h2>
+<div class="bg-yellow-100 p-4">
+
+  <% @receipt_text.each_line do |line| %>
+    <p><%= line %></p>
+  <% end %>
+
+</div>
+
 <h2 class="font-bold">Items:</h2>
 <%= render @bill.expenses %>
-
 <hr>
 
   <div class="flex">
