--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -7,9 +7,10 @@
   <h2 class="text-2xl font-bold">Participants</h2>
   <%= render @event.users %>
 
-
   <div class="grid grid-cols-2 gap-2 m-4">
     <%= render @event.bills%>
   </div>
+
+  <%= link_to 'Add Bill', new_event_bill_path(@event) %>
 
 </div>
